--- a/simple/tsconfig.json
+++ b/simple/tsconfig.json
@@ -18,9 +18,10 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"moduleResolution": "node",
-		"jsx": "react",
+		"jsx": "react-jsx",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
 	}
 }
