--- a/node/Makefile
+++ b/node/Makefile
@@ -7,10 +7,10 @@ js:
 	npm run build
 
 css:
-	sass scss\redpapr.scss:css\redpapr.css --no-source-map
+	sass scss/redpapr.scss:css/redpapr.css --no-source-map
 
 watchcss:
-	sass --watch scss\redpapr.scss:css\redpapr.css --no-source-map
+	sass --watch scss/redpapr.scss:css/redpapr.css --no-source-map
 
 clean:
 	@rm -r dist css
